# universal-converter

./: .gitignore  CMakeLists.txt
src/: ConversionRules.cpp  ConversionRules.hpp  Converter.cpp  Converter.hpp  DependencyChecker.cpp  DependencyChecker.hpp  Downloader.cpp  Downloader.hpp  FormatPanel.cpp  FormatPanel.hpp  MainWindow.cpp  MainWindow.hpp  OutputPanel.cpp  OutputPanel.hpp  SourcePanel.cpp  SourcePanel.hpp  main.cpp
src/headers/: FormatPanel.hpp
